tests/unit/default/syntax-error/121-add-fk.x.t
---- IN ----
+FK|
---- OUT ----
---- ERR ----
syntax: expected <table> after `+FK` near `|` at position 3 - at line 1
---- EXIT ----
1
